Ass-1/getting_started/test_files/valid/test4.cpm
main(): int {
  volatile n : int
  read(n)

  volatile i : int := 2

  for (i := 2, i <= n, i := i + 1) {
    if ( (n / i) * i = n ) {
      print(i)
      print(n)
    }
  }
  return 0
}